# chickaree-db

./: .dockerignore  .gitignore  BUILD  Makefile  README.md  WORKSPACE  chickaree.db  client.proto  docker-compose.yml  go.mod  go.sum  main.go  main_test.go
chickaree/: client.pb.go  client_grpc.pb.go
chickaree/discovery/: membership.go
chickaree/redis/: client.go  protocol.go  protocol_test.go  tcp.go
chickaree/storage/: config.go  distributed.go  distrubuted.go  encode.go  event.go  raft.go  replicate.go  server.go  storage.go
chickaree/storage_old/: event.go
cmd/client-server/: main.go
cmd/server/: main.go
cmd/storage-server/: main.go
deploy/chickaree/: Chart.yaml  values.yaml
deploy/chickaree/templates/: NOTES.txt  _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  stateful.yaml
deploy/chickaree/templates/tests/: test-connection.yaml
docker/client/: Dockerfile
docker/storage/: Dockerfile
licenses/: README.md  boilerplate.go.txt  bsl.md  bsl_header.txt  ccl_header.txt  cla.md
pkg/cmd/server/: BUILD.bazel  main.go
pkg/core/: BUILD.bazel  client.go  protocol.go  repository.go  storage.go
pkg/core/redis/: client.go  protocol.go  protocol_test.go  storage.go
pkg/proto/: BUILD.bazel  client.pb.go  client.proto
pkg/server/: grpc.go  server.go  tcp.go
storage/: storage.go
